Revert "Fix odd overflow issue on orientation change on iOS devices."
Issue #91.

This reverts commit e15789f1dcdbd1e03f03a896170735964c38a2e7.

--- a/assets/sass/_styles.scss
+++ b/assets/sass/_styles.scss
@@ -1,8 +1,4 @@
 /************ Basic *************/
-html {
-    width: 100%;
-    overflow: hidden;
-}
 
 body {
     font-family: $serif;
